# PiPi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cmake/: icu.cmake  podofo-deps.cmake  podofo.cmake  spdlog.cmake  utfcpp.cmake
src/main/: CMakeLists.txt  main.cpp  main.h
src/pipi/: CMakeLists.txt  PiPiAnnotationObserver.cpp  PiPiAnnotationObserver.h  PiPiAnnotationUtil.cpp  PiPiAnnotationUtil.h  PiPiAppearanceException.cpp  PiPiAppearanceException.h  PiPiAppearanceManager.cpp  PiPiAppearanceManager.h  PiPiAppearanceUtil.cpp  PiPiAppearanceUtil.h  PiPiColorConverter.cpp  PiPiColorConverter.h  PiPiCommon.cpp  PiPiCommon.h  PiPiContext.cpp  PiPiContext.h  PiPiEditFieldException.cpp  PiPiEditFieldException.h  PiPiEditor.cpp  PiPiEditor.h  PiPiExtractException.cpp  PiPiExtractException.h  PiPiExtractUtil.cpp  PiPiExtractUtil.h  PiPiExtractor.cpp  PiPiExtractor.h  PiPiField.cpp  PiPiField.h  PiPiFieldCompatibilityException.cpp  PiPiFieldCompatibilityException.h  PiPiFieldCompatibilityUtil.cpp  PiPiFieldCompatibilityUtil.h  PiPiFieldConstants.cpp  PiPiFieldConstants.h  PiPiFieldManager.cpp  PiPiFieldManager.h  PiPiFieldObserver.cpp  PiPiFieldObserver.h  PiPiFieldStyleManageException.cpp  (+54 more)
